--- a/package.json
+++ b/package.json
@@ -26,38 +26,38 @@
     "pnpm": "Please use the bun."
   },
   "dependencies": {
-    "effect": "^3.8.4",
-    "react": "^18.3.1",
-    "remeda": "^2.14.0",
-    "ts-pattern": "^5.4.0",
-    "zod": "^3.23.8"
+    "effect": "^3.12.0",
+    "react": "^19.0.0",
+    "remeda": "^2.19.0",
+    "ts-pattern": "^5.6.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.2",
-    "@cspell/eslint-plugin": "^8.14.4",
-    "@eslint/js": "^9.11.1",
-    "@tsd/typescript": "^5.6.2",
-    "@types/bun": "latest",
+    "@biomejs/biome": "1.9.4",
+    "@cspell/eslint-plugin": "^8.17.1",
+    "@eslint/js": "^9.17.0",
+    "@tsd/typescript": "^5.7.2",
+    "@types/bun": "^1.1.14",
     "@types/eslint": "^9.6.1",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.7.4",
-    "@types/react": "^18.3.10",
-    "concurrently": "^9.0.1",
-    "eslint": "^9.11.1",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import-x": "^4.3.0",
-    "eslint-plugin-sonarjs": "^2.0.2",
-    "globals": "^15.9.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
+    "@types/node": "^22.10.5",
+    "@types/react": "^19.0.2",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.17.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import-x": "^4.6.1",
+    "eslint-plugin-sonarjs": "^3.0.1",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.3.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "5.5.4",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.1"
+    "typescript": "5.7.2",
+    "typescript-eslint": "^8.19.0",
+    "vite": "^6.0.7",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   },
   "module": "index.ts"
 }
